--- a/custom.css
+++ b/custom.css
@@ -2,6 +2,7 @@ body {
     background-image: url("media/bg.png");
     background-repeat: repeat;
     padding-top: 12rem;
+    background-color:rgb(68, 68, 68);
 }
 
 img.center {
