Fixed home link

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -41,7 +41,11 @@
       </ul>
     </section>
   </section> -->
-  &nbsp;
+  <ul class="actions">
+    <li>
+      <a href="{{ "/" | absolute_url }}" class="button">Return Home</a>
+    </li>
+  </ul>
 </footer>
 <!-- Copyright -->
 <div id="copyright">
