--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,7 +13,7 @@
 <ul class="icons">
   <li>
     <a href="https://www.youtube.com/user/zenvent/" class="icon fa-youtube" rel="nofollow">
-      <span class="label">Instagram</span>
+      <span class="label">YouTube</span>
     </a>
   </li>
   <li>
