--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,5 +1,5 @@
 <footer id="footer">
-    <a href="{{ "/" | absolute_url }}" class="button">Return Home</a>
+    <a href="{{ "/" | absolute_url }}">Return Home</a>
 </footer>
 <div id="copyright">
   © 2018 ZENVENT
