--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,6 +8,9 @@
   <li class="{% if page.url contains '/about/' %} active {% endif %}">
     <a href="{{ "/about/" | absolute_url }}">about</a>
   </li>
+  <li class="{% if page.url contains '/contact/' %} active {% endif %}">
+    <a href="{{ "/contact/" | absolute_url }}">contact</a>
+  </li>
 </ul>
 
 <ul class="icons">
