--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3557,6 +3557,10 @@
 		color: #18bfef !important;
 	}
 
+	#footer a {
+		border-bottom-color: transparent;
+	}
+
 	#copyright {
 		color: #ffffff;
 		position: relative;
@@ -3776,11 +3780,11 @@
 /* Random CSS */
 
 .videoWrapper {
-position: relative;
-padding-bottom: 56.25%; /* 16:9 */
-padding-top: 25px;
-height: 0;
-margin-bottom: 25px;
+	position: relative;
+	padding-bottom: 53.5%; /* 16:10 */
+	padding-top: 1.5625rem;
+	height: 0;
+	margin-bottom: 1.5625rem;
 }
 
 .videoWrapper iframe {
@@ -3795,4 +3799,21 @@ margin-bottom: 25px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 	transition: 0.3s;
 	height: 100%;
+	padding-bottom: 2rem;
+}
+
+.postCard hover {
+	box-shadow: 0 4px 8px 0  rgb(0, 204, 255) !important;
+}
+
+.postCard a {
+	border-bottom-color: transparent;
+}
+
+.followMe {
+	text-align: center;
+}
+
+.followMe a {
+	padding: 2rem;
 }
