--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,6 +1,11 @@
 <footer id="footer">
-    <a href="{{ "/" | absolute_url }}">Return Home</a>
+    <div class="followMe">
+        <a href="https://www.youtube.com/user/zenvent/" class="icon fa-youtube" rel="nofollow"></a>
+        <a href="https://facebook.com/https://www.facebook.com/THEZENVENT/" class="icon fa-facebook" rel="nofollow"></a>
+        <a href="https://github.com/zenvent" class="icon fa-github" rel="nofollow"></a>
+        <a href="https://www.linkedin.com/in/zacrabtree/" class="icon fa-linkedin" rel="nofollow"></a>
+    </div>
 </footer>
 <div id="copyright">
-  © 2018 ZENVENT
+    <a href="{{ "/" | absolute_url }}">© 2018 ZENVENT</a>
 </div>
