--- a/_includes/tracking.html
+++ b/_includes/tracking.html
@@ -1,9 +1,8 @@
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122048100-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={{site.analytics-id}}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  function gtag(){dataLayer.push(arguments)};
   gtag('js', new Date());
 
-  gtag('config', 'UA-122048100-1');
+  gtag('config', '{{site.analytics-id}}');
 </script>
