--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,31 +35,22 @@
       </section>
 
       <div class="comments-wrapper">
-        <div id="disqus_thread"></div>
-        <script>
-          /**
-           *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-           *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
-           */
-
+          <div id="disqus_thread"></div>
+          <script>
           var disqus_config = function () {
-            this.page.url = '{{ absolute_url }}{{ page.url }}';  /*Replace PAGE_URL with your page's canonical URL variable*/
-            this.page.identifier = '{{ page.url }}'; /*Replace PAGE_IDENTIFIER with your page's unique identifier variable*/
+            this.page.url = "http://zenvent.com";
+            this.page.identifier = '{{ page.url }}'; 
           };
-
-          (function () {  /* dont endit below this line */
-            var d = document, s = d.createElement('script');
-
-            s.src = 'https://{{disqus_shortname}}.disqus.com/embed.js';
-
-            s.setAttribute('data-timestamp', + new Date());
-            (d.head || d.body).appendChild(s);
+          
+          (function() {
+          var d = document, s = d.createElement('script');
+          s.src = 'https://zenvent.disqus.com/embed.js';
+          s.setAttribute('data-timestamp', +new Date());
+          (d.head || d.body).appendChild(s);
           })();
-        </script>
-        <noscript>Please enable JavaScript to view the
-          <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a>
-        </noscript>
-      </div>
+          </script>
+          <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                                      
     </div>
     {% include foot.html %}
   </div>
