--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@
 
     <!-- Main -->
     <div id="main">
-      <section class="post">
+      <section class="post" style="margin-left: 2rem; margin-right: 2rem;">
         <header class="major">
           <span class="date">{{page.date | date_to_string}}</span>
           <h1>{{page.title}}</h1>
@@ -32,7 +32,7 @@
           <img src="{{page.image}}" alt="">
         </div>
         <p>{{content}}</p>
-      </section>
+      <br>
 
       <div class="comments-wrapper">
           <div id="disqus_thread"></div>
@@ -50,7 +50,7 @@
           })();
           </script>
           <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                                      
+        </section>                         
     </div>
     {% include foot.html %}
   </div>
