--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3499,9 +3499,9 @@
 
 		@media screen and (max-width: 736px) {
 
-			#main > * {
-				padding: 2rem 2rem 0.1rem 2rem ;
-			}
+		}
+
+		@media screen and (max-width: 736px) {
 
 		}
 
