--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1168,7 +1168,7 @@
 
 	}
 
-	@media screen and (max-width: 480px) {
+	/* @media screen and (max-width: 480px) {
 
 		.row > * {
 			padding: 0 0 0 1.5rem;
@@ -1596,7 +1596,7 @@
 			margin-left: 8.33333%;
 		}
 
-	}
+	} */
 
 /* Basic */
 
@@ -3499,9 +3499,9 @@
 
 		@media screen and (max-width: 736px) {
 
-		}
-
-		@media screen and (max-width: 736px) {
+			#main > * {
+				padding: 2rem 2rem 0.1rem 2rem ;
+			}
 
 		}
 
