--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3438,6 +3438,11 @@
 				width: 50%;
 			}
 
+			#main > .posts > * {
+				padding: 2rem 2rem 2rem 2rem ;
+				width: 50%;
+			}
+
 				#main > .posts > article > :last-child {
 					margin-bottom: 0;
 				}
@@ -3785,7 +3790,6 @@
 }
 
 .postCard {
-	margin-top: 2rem;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 	transition: 0.3s;
 	height: 100%;
