--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2147,13 +2147,13 @@
 		margin: 0 0 0.75rem 0;
 	}
 
-
+		@media screen and (max-width: 980px) {
 
 			label {
 				font-size: 0.9rem;
 			}
 
-
+		}
 
 	input[type="text"],
 	input[type="password"],
@@ -2773,13 +2773,13 @@
 					right: 0;
 				}
 
-
+		@media screen and (max-width: 980px) {
 
 			header br {
 				display: none;
 			}
 
-
+		}
 
 		@media screen and (max-width: 736px) {
 
@@ -2826,12 +2826,13 @@
 			text-transform: uppercase;
 		}
 
-
+			@media screen and (max-width: 980px) {
 
 				table th {
 					font-size: 0.9rem;
 				}
 
+			}
 
 		table thead {
 			border-bottom: solid 2px;
@@ -2956,13 +2957,13 @@
 			margin-left: 0.9375em;
 		}
 
-
+		@media screen and (max-width: 980px) {
 
 			.pagination a, .pagination span {
 				font-size: 0.9rem;
 			}
 
-
+		}
 
 		/* @media screen and (max-width: 480px) {
 
@@ -3165,14 +3166,14 @@
 				color: #18bfef !important;
 			}
 
-
+		@media screen and (max-width: 980px) {
 
 			#header {
 				height: 14rem;
 				padding-bottom: 4rem;
 			}
 
-
+		}
 
 		@media screen and (max-width: 736px) {
 
@@ -3329,13 +3330,13 @@
 			margin-bottom: 0;
 		}
 
-
+		@media screen and (max-width: 980px) {
 
 			#nav {
 				display: none;
 			}
 
-
+		}
 
 /* Main */
 
@@ -3449,7 +3450,7 @@
 					border-top-width: 0;
 				}
 
-
+			@media screen and (max-width: 980px) {
 
 				#main > .posts > * {
 					width: 50%;
@@ -3460,7 +3461,7 @@
 					width: 50%;
 				}
 
-
+			}
 
 			@media screen and (max-width: 736px) {
 
