--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3347,7 +3347,8 @@
 		width: calc(100% - 4rem);
 		max-width: 72rem;
 		z-index: 2;
-		padding: 2rem;
+		padding-top: 2rem;
+		padding-bottom: 2rem;
 	}
 
 		#main > * {
