--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -21,7 +21,7 @@
 		</nav>
 
 		<!-- Main -->
-		<div id="main">
+		<div id="main" style="padding: 2rem;">
 
 			<!-- Post -->
 			<section class="post">
