--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@
     </nav>
 
     <!-- Main -->
-    <div id="main">
+    <div id="main" style="padding: 2rem;">
       <section class="post" style="margin-left: 2rem; margin-right: 2rem; margin-top: 2rem;">
         <header class="major">
           <span class="date">{{page.date | date_to_string}}</span>
