--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -116,7 +116,7 @@
 
     <!-- Main -->
     <div id="main" style="padding: 2rem;">
-      <section class="post" style="margin-left: 2rem; margin-right: 2rem; margin-top: 2rem;">
+      <section class="post">
         <header class="major">
           <span class="date">{{page.date | date_to_string}}</span>
           <h1>{{page.title}}</h1>
