--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -123,7 +123,7 @@
           <p>{{page.excerpt}}</p>
         </header>
         <div class="image main">
-          <img src="{{page.image}}" alt="">
+          <img img id="imgX" onclick="imageModel(this.id);" src="{{page.image}}" alt="">
         </div>
         <p>{{content}}</p>
       <br>
