--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,7 +20,7 @@
     </a>
   </li>
   <li>
-    <a href="https://facebook.com/https://www.facebook.com/THEZENVENT/" class="icon fa-facebook" rel="nofollow">
+    <a href="https://www.facebook.com/THEZENVENT/" class="icon fa-facebook" rel="nofollow">
       <span class="label">Facebook</span>
     </a>
   </li>
