adding app store

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,6 +20,11 @@
     </a>
   </li>
   <li>
+    <a href="https://play.google.com/store/apps/developer?id=ZENVENT" class="icon fa-google-play" rel="nofollow">
+      <span class="label">Play Store</span>
+    </a>
+  </li>
+  <li>
     <a href="https://www.facebook.com/THEZENVENT/" class="icon fa-facebook" rel="nofollow">
       <span class="label">Facebook</span>
     </a>
