--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
 <link rel="shortcut icon" href="{{ "/assets/icon/favicon.ico" | absolute_url }}">
 <meta name="msapplication-config" content="{{ "/assets/icon/browserconfig.xml" | absolute_url }}">
 <meta name="theme-color" content="#ffffff">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
 <!-- CSS -->
 <link rel="stylesheet" href="{{ "/assets/css/main.css" | absolute_url }}" />
