--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,6 +20,7 @@
     </a>
   </li>
   <li>
+      <i class="fas fa-google-play"></i>
     <a href="https://play.google.com/store/apps/developer?id=ZENVENT" class="fas fa-google-play" rel="nofollow">
       <span class="label">Play Store</span>
     </a>
