--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,7 +1,7 @@
 <footer id="footer">
     <div class="followMe">
         <a href="https://www.youtube.com/user/zenvent/" class="icon fa-youtube" rel="nofollow"></a>
-        <a href="https://play.google.com/store/apps/developer?id=ZENVENT" class="icon fab fa-google-play" rel="nofollow"></a>
+        <a href="https://play.google.com/store/apps/developer?id=ZENVENT" class="fab fa-google-play" rel="nofollow"></a>
         <a href="https://www.facebook.com/THEZENVENT/" class="icon fa-facebook" rel="nofollow"></a>
         <a href="https://github.com/zenvent" class="icon fa-github" rel="nofollow"></a>
         <a href="https://www.linkedin.com/in/zacrabtree/" class="icon fa-linkedin" rel="nofollow"></a>
