--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,7 +20,7 @@
     </a>
   </li>
   <li>
-    <a href="https://play.google.com/store/apps/developer?id=ZENVENT" class="fab fa-google-play" rel="nofollow">
+    <a href="https://play.google.com/store/apps/developer?id=ZENVENT" class="icon fab fa-google-play" rel="nofollow">
     </a>
   </li>
   <li>
