--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,12 +15,14 @@
 
 <ul class="icons">
   <li>
-    <a href="https://www.youtube.com/user/zenvent/" class="icon fab fa-youtube" rel="nofollow">
+    <a href="https://www.youtube.com/user/zenvent/" class="icon" rel="nofollow">
+      <i class="fab fa-youtube"></i>
       <span class="label">YouTube</span>
     </a>
   </li>
   <li>
-    <a href="https://play.google.com/store/apps/developer?id=ZENVENT" class="icon fab fa-google-play" rel="nofollow">
+    <a href="https://play.google.com/store/apps/developer?id=ZENVENT" class="icon" rel="nofollow">
+      <i class="fab fa-google-play"></i>
       <span class="label">Google Play</span>
     </a>
   </li>
