--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,14 +15,12 @@
 
 <ul class="icons">
   <li>
-    <a href="https://www.youtube.com/user/zenvent/" class="icon" rel="nofollow">
-      <i class="fab fa-youtube"></i>
+    <a href="https://www.youtube.com/user/zenvent/" class="icon fa-youtube-play" rel="nofollow">
       <span class="label">YouTube</span>
     </a>
   </li>
   <li>
-    <a href="https://play.google.com/store/apps/developer?id=ZENVENT" class="icon" rel="nofollow">
-      <i class="fab fa-google-play"></i>
+    <a href="https://play.google.com/store/apps/developer?id=ZENVENT" class="icon fa-play" rel="nofollow">
       <span class="label">Google Play</span>
     </a>
   </li>
