--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -3,7 +3,7 @@
         <a href="https://www.youtube.com/user/zenvent/" class="icon fa-youtube" rel="nofollow"></a>
         <a href="https://www.facebook.com/THEZENVENT/" class="icon fa-facebook" rel="nofollow"></a>
         <a href="https://github.com/zenvent" class="icon fa-github" rel="nofollow"></a>
-        <a href="https://www.linkedin.com/in/zacrabtree/" class="icon fa-linkedin" rel="nofollow"></a>
+        <a href="https://www.linkedin.com/in/crabz/" class="icon fa-linkedin" rel="nofollow"></a>
     </div>
 </footer>
 <div id="copyright">
