--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,7 +30,7 @@
     </a>
   </li>
   <li>
-    <a href="https://www.linkedin.com/in/zacrabtree/" class="icon fa-linkedin" rel="nofollow">
+    <a href="https://www.linkedin.com/in/crabz/" class="icon fa-linkedin" rel="nofollow">
       <span class="label">LinkedIn</span>
     </a>
   </li>
