--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -132,7 +132,7 @@
           <div id="disqus_thread"></div>
           <script>
           var disqus_config = function () {
-            this.page.url = "http://zenvent.com";
+            this.page.url = "{{ site.url }}{{ page.url | absolute_url }}";
             this.page.identifier = '{{ page.url }}'; 
           };
           
