--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -128,7 +128,7 @@
         <p>{{content}}</p>
       <br>
 
-      <div class="comments-wrapper">
+      <!-- <div class="comments-wrapper">
           <div id="disqus_thread"></div>
           <script>
           var disqus_config = function () {
@@ -145,7 +145,7 @@
           </script>
           <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         </section>                         
-    </div>
+    </div> -->
     {% include foot.html %}
   </div>
 
