--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -145,7 +145,7 @@
           </script>
           <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         </section>                         
-    </div> -->
+    </div>
     {% include foot.html %}
   </div>
 
